Serve /devstate/resource
